--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-cd
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GLAB308A21</title>
+</head>
+<body>
+    <H1>GLAB308A.2.1</H1>
+</body>
+</html>
